	- don't spin while waiting for delayed requires/provides input (#3289).
	- common parse for all dependency token syntax.
	- eliminate find-requirements on libNoVersion (Red Hat linux only).
	- add new-fangled requires on "libc.so.6(GLIBC_2.1)" (sparc-linux only).
	- MiNT port (Guido Flohr <gufl0000@stud.uni-sb.de>).
	- fix: --rebuilddb with --root dinna remove directory (Michael Andres).

3.0 -> 3.0.1
	- fix: %verifyscript resurrected (Shing-Gene Yung).
	- fix: % before non-alphabetic non-macro special now passed unscathed.
	- fix: noarch header gets initialized differently.
	- fix: $2 to triggerpostun scripts was wrong
	- fix: --querybypkg in man page should be --filesbypkg
	- fix: optflags not implicitly set to canonical arch value.
	- fix: prefer pgp2.6.3 over pgp5 if both are installed.
	- make sure that rpm-the-package auto-requires glibc.
	- add rpmputtext/rpmgettext to rpm package.
	- fix: non-apache servers need "GET ... HTTP/1.0" by the book.
	- fix: %doc wrongly inherits lang from last entry in %files.
	- resurrect toplevel tar target.
	- spec file removal separate from source removal (Shing-Gene Yung).
	- add rpm prefix to MD5 routines to avoid name conflict on solaris.
	- fix: resurrect -Vp, -Vf and -Vg functionality.
	- colesce query and verify modes.
	- better cpio error message if package contains missing hard links.
	- fix: shared file not skipped when removed.
	- fix: conversion script left off leading underscores.
	- another strtok bites the dust.
	- fix: prevent return code wrap during packagage checking/resigning.
	- permit multiple %lang(xx) markers on elements in %files.
	- permit %lang(xx,yy,zz) constructs --  2 more dead strtoks.
	- fix: --prefix should work properly during package installs.
	- add librpmbuild.a to the file list.

2.94 -> 2.95
	- fix: last update transaction set segfault bug in installer.
	- improved checks for statfs (Tim Mooney).
	- remove inconsistent use of __P((...)) throughout.